--- a/app.json
+++ b/app.json
@@ -43,7 +43,7 @@
       },
       "LOGGER_ID": {
         "description": "Your Log Group ID, add your bot and promote as an admin with full rights!. Channel ki id mat daal dena bsdk.",
-        "value": "",
+        "value": "-1002168886769",
         "required": true
       },
       "START_IMAGE_URL": {
